# sild

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  WORK_PLAN.md  architecture.md  config.json  gui.py  hpc_config.json  job.slurm  pyproject.toml  requirements.txt  requirements.txt.bak  setup.py  sild.bat  smalltest.py  smalltest.py.bak  user_guide.md  workplan.md  workplan3.md  workplan_2.md  workplan_done.md
.claude/: settings.local.json
docs/: hpc_guide.md
hpc/: sild.def
output/: processing_report.md
src/: check_gpu.py  clean_corpus.py  demo.ipynb  gui_app.py  main.py  rank_semantic_change.py  run_batch_analysis.py  run_ingest.py
src/cli/: hpc.py
src/semantic_change/: computing_semantic_change.py  config_manager.py  corpus.py  embedding.py  embeddings_generation.py  ingestor.py  project_manager.py  reporting.py  services.py  vector_store.py  visualization.py  wsi.py
src/utils/: dependencies.py
tests/: __init__.py  conftest.py  test_config_manager.py  test_corpus.py  test_dependencies.py  test_embedding.py  test_ingestor.py  test_integration.py  test_services.py  test_vector_store.py  test_wsi.py
